news for release 957 since 953
------------------------------

* fixed unitialized memory access problem for 'picosat_deref_partial'
  and another issue with partial models

* added 'picosat_add_arg' and 'picosat_add_lits'

* '--plain' and 'picosat_set_plain' to disable failed literal probing

* new '#define PICOSAT_REENTRANT_API' in 'picosat.h'

* added manager so no more global variables
  (allows multiple instances, requires manager object)

news for release 951 since 941
------------------------------

* cleaned up code (based on comments by Donald Knuth)

* lreduce=O(conflicts^.5)

* added 'picosat_visits' and 'picosat_decisions'

* added '--partial' command line option

* added 'picosat_deref_partial' and 'picosat_save_original_clauses'

* added 'picomcs' as example for MSS computation

news for release 941 since 936
------------------------------

* added 'picogcnf'

* added All-SAT mode ('--all' command line option)

* statistics include time spent in failed literal preprocessing (probing)

* 'picosat_failed_context' for 'push & pop'
   (and tested failed assumptions for 'push & pop')

* 'picosat_simplify' for forced garbage collection

* undefined NFL, defined NADC (= failed literals on, ADC's off)

* 'picosat_push' and 'picosat_pop' (beta version)

* fixed some issues related to binary clause handling and 
  generating list of failed assumptions

news for release 936 since 935
------------------------------

* simple minimal unsatisfiable core (MUS) extractor 'picomus'
  (example for using 'picosat_mus_assumptions' and 'picosat_coreclause')

* added 'picosat_mus_assumptions'

* added 'picosat_{set_}propagations'

* new 'int' return value for 'picosat_enable_trace_generation' to
  check for trace code being compiled

news for release 935 since 926
------------------------------

* added 'picosat_failed_assumptions' (plural)

* new '-A <failedlits>' command line option

* fixed failed assumption issues

* added 'picosat_remove_learned'
